syntax = "proto3";

package search;

option go_package = ".";

message SearchItem {
  string id = 1;
  string sku = 2;
  string name = 3;
  string description = 4;
  bytes image_bytes = 5;
  float price = 6;
  float discount = 7;
  float weight = 8;
  int32 quantity = 9;
  repeated string tags = 10;
  int64 created_at = 11;
  int64 updated_at = 12;
}

message SearchRequest {
  string query = 1;
}

message SearchResponse {
  repeated SearchItem items = 1;
}

service SearchService {
  rpc search(SearchRequest) returns (SearchResponse);
}